--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,126 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700;1,800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
+*{
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+body{
+  background-color: ghostwhite;
+}
+h1, h2, h3, h4, h5, h6{
+  font-family: 'Poppins', sans-serif;
+}
+
+p {
+  font-family: 'Open Sans', sans-serif;
+}
+
 .App {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.home{
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+}
+
+  .btn {
+    /* min-width: 130px;
+    height: 40px; */
+    color: #fff;
+    padding: 5px 10px;
+    font-weight: bold;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    position: relative;
+    display: inline-block;
+    outline: none;
+    border-radius: 5px;
+    border: 2px solid #2c0b8e;
+    background: #2c0b8e;
+    text-decoration: none;
+    font-family: 'Open Sans', sans-serif;
+  }
+  .btn:hover {
+    background: #fff;
+    color: #2c0b8e
+  }
+
+.title{
+  font-size: 70px;
+  margin-bottom: 50px;
+  font-weight: 800;
+}
+.usersProfile>.title{
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  font-size: 35px;
+}
+
+.profile{
+  padding: 10px;
+  display: flex;
+  margin-bottom: 20px;
+  width: 80%;
+  /* -webkit-box-shadow: 2px 1px 7px 3px rgba(0,0,0,0.96); 
+  box-shadow: 2px 1px 7px 3px rgba(0,0,0,0.96); */
+  border-radius: 20px;
+  background: #FFFFFF;
+  box-shadow:  19px 19px 38px #d9d9d9,
+              -19px -19px 38px #ffffff;
+}
+
+.profileImg{
+  margin-right: 15px;
+}
+
+.userName > p{
+  font-weight: bold;
+  /* font-size: 20px; */
+}
+
+.pageNumbers {
+  list-style: none;
+  display: flex;
+}
+
+.pageNumbers li {
+  padding: 10px;
+  border: 1px solid white;
+  cursor: pointer;
+}
+
+.pageNumbers li.active {
+  background-color: white;
+  color: black;
+}
+
+.pageNumbers li button {
+  background-color: transparent;
+  border: none;
   color: white;
+  font-size: 1.5rem;
+  cursor: pointer;
+}
+.pageNumbers li button:hover {
+  background-color: white;
+  color: black;
+}
+.pageNumbers li button:focus {
+  outline: none;
 }
 
-.App-link {
-  color: #61dafb;
-}
+.loadmore {
+  padding: 1rem;
+  background-color: transparent;
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  color: white;
+  font-size: 1.2rem;
+  border: 1px solid white;
+  cursor: pointer;
 }
